--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   }],
   "require": {
     "silverstripe/framework": "~3.*",
-    "silverstripe/cms": "~3.*"
+    "silverstripe/cms": "~3.*",
     "enygma/yubikey": "dev-master"
   },
   "extra": {
