--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,19 @@
   "name": "Firesphere/yubiauth",
   "description": "Enable authentication with a Yubikey",
   "type": "silverstripe-module",
-  "keywords": ["silverstripe", "Yubikey"],
-  "authors": [{
-    "name": "Simon Erkelens",
-    "email": "simonerkelens@silverstripe.com"
-  }],
+  "keywords": [
+    "silverstripe",
+    "Yubikey"
+  ],
+  "authors": [
+    {
+      "name": "Simon Erkelens",
+      "email": "simonerkelens@silverstripe.com"
+    }
+  ],
   "require": {
-    "silverstripe/framework": "~3.*",
-    "silverstripe/cms": "~3.*",
+    "silverstripe/framework": "~3.2",
+    "silverstripe/cms": "~3.2",
     "enygma/yubikey": "dev-master"
   },
   "extra": {
@@ -20,5 +25,4 @@
     "source": "https://github.com/firesphere/silverstripe-yubiauth"
   },
   "target-dir": "yubiauth"
-
 }
