Small fixes to improve overall flow.

--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -1,3 +1,6 @@
 Member:
   extensions:
-    - Firesphere\YubiAuth\YubiAuthMemberExtension
+    - Firesphere\YubiAuth\MemberExtension
+SiteConfig:
+  extensions:
+    - Firesphere\YubiAuth\SiteConfigExtension
