--- a/_config/config.yml
+++ b/_config/config.yml
@@ -3,5 +3,13 @@ Name: YubiAuth
 ---
 Firesphere\YubiAuth\YubikeyAuthenticator:
   AuthURL: ''
+Firesphere\YubiAuth\YubiAuthProvider:
   MaxNoYubiLogin: 25
   MaxNoYubiLoginDays: 5
+# Copy the part below and uncomment it to enable the yubikey authentication.
+# You can also name it default, to replace the default login method.
+#SilverStripe\Core\Injector\Injector:
+#  SilverStripe\Security\Security:
+#    properties:
+#      authenticators:
+#        yubikey: %$Firesphere\YubiAuth\YubikeyMemberAuthenticator
