--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -1,6 +1,3 @@
-Member:
+SilverStripe\Security\Member:
   extensions:
     - Firesphere\YubiAuth\MemberExtension
-SiteConfig:
-  extensions:
-    - Firesphere\YubiAuth\SiteConfigExtension
