--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,30 @@
   "license": "BSD-3-Clause",
   "keywords": [
     "silverstripe",
-    "Yubikey"
+    "Yubikey",
+    "authentication",
+    "module",
+    "security"
   ],
   "authors": [
     {
-      "name": "Simon Erkelens",
+      "name": "Simon `Firesphere` Erkelens",
       "email": "simonerkelens@silverstripe.com"
     }
   ],
   "require": {
-    "silverstripe/framework": "~3.2",
-    "silverstripe/cms": "~3.2",
-    "enygma/yubikey": "dev-master"
+    "silverstripe/cms": "4.0.x-dev",
+    "silverstripe/framework": "4.0.x-dev",
+    "enygma/yubikey": "^3.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7"
   },
   "extra": {
-    "installer-name": "yubiauth"
+    "installer-name": "yubiauth",
+    "branch-alias": {
+      "dev-master": "2.0.x-dev"
+    }
   },
   "support": {
     "issues": "https://github.com/firesphere/silverstripe-yubiauth/issues",
