--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ php:
 
 env:
   - DB=MYSQL CORE_RELEASE=3.2
+  - YUBIAUTH_CLIENTID]30716
+  - YUBIAUTH_APIKEY="STDKcetpbketpid="
+
 
 matrix:
   allow_failures:
