--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Firesphere\\YubiAuth": "code/"
+      "Firesphere\\YubiAuth\\": "code/"
     }
   },
   "target-dir": "yubiauth"
