--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ before_script:
   - composer install
 
 script:
-  - vendor/bin/phpunit yubiauth/tests
+  - vendor/bin/phpunit yubiauth/tests --coverage-clover=coverage.xml
 
 after_success:
+  - cd ~/builds/ss/yubiauth
   - bash <(curl -s https://codecov.io/bash)
