--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
   - composer install
 
 script:
-  - vendor/bin/phpunit yubiauth/tests --coverage-clover=coverage.xml
+  - vendor/bin/phpunit yubiauth/tests
 
 after_success:
   - cd ~/builds/ss/yubiauth
