--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,6 @@ jobs:
     working_directory: ~/var/www
 
     steps:
-      - run: git clone -b 4 https://github.com/silverstripe/silverstripe-installer.git ~/var/www
-
       # Install additional requirements
       - run:
           command: |
@@ -34,25 +32,13 @@ jobs:
             php composer-setup.php --install-dir=/usr/local/bin --filename=composer
             php -r "unlink('composer-setup.php');"
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: composer install -n --prefer-dist
-      - run: composer require firesphere/yubiauth:dev-master
+      - run: composer create-project silverstripe/installer:dev-master ~/var/www -n
       - run: composer require scriptfusion/phpunit-immediate-exception-printer:^1
+      - run: composer require firesphere/yubiauth:dev-master -n
       - run: cp yubiauth/_config/config.yml.example mysite/_config/yubikey.yml
       - run: rm phpunit.xml.dist
       - run: cp yubiauth/phpunit.xml.dist .
       - run: framework/sake dev/build
-
-      - save_cache:
-          paths:
-            - ./vendor
-          key: v1-dependencies-{{ checksum "composer.json" }}
 
       # run tests!
       - run: vendor/bin/phpunit yubiauth/tests/unit -d memory_limit=512M
