Add "keys" to config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
           - SS_DATABASE_PASSWORD=ubuntu
           - SS_DATABASE_NAME=circle_test
           - SS_ENVIRONMENT_TYPE=test
+          - YUBIAUTH_CLIENTID="12345"
+          - YUBIAUTH_APIKEY="ThisIsReallyAValidKey"
       - image: circleci/mysql:5.7
         environment:
           - MYSQL_USER=root
