"valid" api key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           - SS_DATABASE_NAME=circle_test
           - SS_ENVIRONMENT_TYPE=test
           - YUBIAUTH_CLIENTID="12345"
-          - YUBIAUTH_APIKEY="ThisIsReallyAValidKey"
+          - YUBIAUTH_APIKEY="VGhpc0lzUmVhbGx5QVZhbGlkS2V5"
       - image: circleci/mysql:5.7
         environment:
           - MYSQL_USER=root
