--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,7 +21,11 @@
 	<testsuite name="Default">
 		<directory>tests</directory>
 	</testsuite>
-
+	<filter>
+		<whitelist processUncoveredFilesFromWhitelist="true">
+			<directory suffix=".php">src/</directory>
+		</whitelist>
+	</filter>
 	<groups>
 		<exclude>
 			<group>sanitychecks</group>
