--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,9 +1,11 @@
-inherit: true
-
 checks:
-  php:
-    code_rating: true
-    duplication: true
+  php: true
+
+build:
+  nodes:
+    analysis:
+      tests:
+        override: [php-scrutinizer-run]
 
 filter:
-  paths: [src/*, tests/*]
+  paths: ["src/*", "tests/*"]
