--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "firesphere/yubiauth",
   "description": "Enable authentication with a Yubikey",
-  "type": "silverstripe-module",
+  "type": "silverstripe-vendormodule",
   "license": "BSD-3-Clause",
   "keywords": [
     "silverstripe",
