--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           - SS_DATABASE_PASSWORD=ubuntu
           - SS_DATABASE_NAME=circle_test
           - SS_ENVIRONMENT_TYPE=test
-          - YUBIAUTH_CLIENTID="12345"
-          - YUBIAUTH_APIKEY="VGhpc0lzUmVhbGx5QVZhbGlkS2V5"
+          - YUBIAUTH_CLIENTID=12345
+          - YUBIAUTH_APIKEY=Ghpc0lzUmVhbGx5QVZhbGlkS2V5
       - image: circleci/mysql:5.7
         environment:
           - MYSQL_USER=root
