Add names to yml

--- a/_config/extensions.yml
+++ b/_config/extensions.yml
@@ -1,3 +1,8 @@
+---
+Name: yubiauthextension
+After:
+  - '#cmsextensions'
+---
 SilverStripe\Security\Member:
   extensions:
     - Firesphere\YubiAuth\MemberExtension
