--- a/_config/security.yml
+++ b/_config/security.yml
@@ -1,2 +1,7 @@
+---
+Name: yubiauthsecurity
+After:
+  - '#coresecurity'
+---
 Firesphere\YubiAuth\YubikeyLoginForm:
   authenticator_class: Firesphere\YubiAuth\YubikeyAuthenticator
